// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination[Base] should render correctly  1`] = `
<div
  class="c-kqdu84 soui-pagination-pagination clpvkbt soui-pagination-left"
>
  <div
    class="c-z4e58d soui-pagination-section c7bdtpb soui-pagination-buttons"
  >
    <button
      class="c-z4e58d soui-pagination-section c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button c-fpstvu soui-button-disabled cyar3hj soui-button-text c2ekatz soui-button-square"
      disabled=""
      type="button"
    >
      <span
        class="clptm3f soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="cyreavb soui-pagination-button-item cusxw20 soui-button-primary c-5l0cgk soui-button-button c2ekatz soui-button-square"
      type="button"
    >
      1
    </button>
    <button
      class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
      type="button"
    >
      2
    </button>
    <button
      class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
      type="button"
    >
      3
    </button>
    <button
      class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
      type="button"
    >
      4
    </button>
    <button
      class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
      type="button"
    >
      5
    </button>
    <button
      class="c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
      type="button"
    >
      <span
        class="clptm3f soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text"
      type="button"
    >
      1000
    </button>
    <button
      class="c-z4e58d soui-pagination-section c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
      type="button"
    >
      <span
        class="clptm3f soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about align 1`] = `
<div>
  <div
    class="c-kqdu84 soui-pagination-pagination clpvkbt soui-pagination-left"
    style="margin-bottom: 24px;"
  >
    <div
      class="c-z4e58d soui-pagination-section c7bdtpb soui-pagination-buttons"
    >
      <button
        class="c-z4e58d soui-pagination-section c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button c-fpstvu soui-button-disabled cyar3hj soui-button-text c2ekatz soui-button-square"
        disabled=""
        type="button"
      >
        <span
          class="clptm3f soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cyreavb soui-pagination-button-item cusxw20 soui-button-primary c-5l0cgk soui-button-button c2ekatz soui-button-square"
        type="button"
      >
        1
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        2
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        3
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        4
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        5
      </button>
      <button
        class="c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        <span
          class="clptm3f soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        10
      </button>
      <button
        class="c-z4e58d soui-pagination-section c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        <span
          class="clptm3f soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="c-kqdu84 soui-pagination-pagination c-fkrwqx soui-pagination-center"
    style="margin-bottom: 24px;"
  >
    <div
      class="c-z4e58d soui-pagination-section c7bdtpb soui-pagination-buttons"
    >
      <button
        class="c-z4e58d soui-pagination-section c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button c-fpstvu soui-button-disabled cyar3hj soui-button-text c2ekatz soui-button-square"
        disabled=""
        type="button"
      >
        <span
          class="clptm3f soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cyreavb soui-pagination-button-item cusxw20 soui-button-primary c-5l0cgk soui-button-button c2ekatz soui-button-square"
        type="button"
      >
        1
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        2
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        3
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        4
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        5
      </button>
      <button
        class="c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        <span
          class="clptm3f soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        10
      </button>
      <button
        class="c-z4e58d soui-pagination-section c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        <span
          class="clptm3f soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="c-kqdu84 soui-pagination-pagination cy3jcfu soui-pagination-right"
  >
    <div
      class="c-z4e58d soui-pagination-section c7bdtpb soui-pagination-buttons"
    >
      <button
        class="c-z4e58d soui-pagination-section c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button c-fpstvu soui-button-disabled cyar3hj soui-button-text c2ekatz soui-button-square"
        disabled=""
        type="button"
      >
        <span
          class="clptm3f soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cyreavb soui-pagination-button-item cusxw20 soui-button-primary c-5l0cgk soui-button-button c2ekatz soui-button-square"
        type="button"
      >
        1
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        2
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        3
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        4
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        5
      </button>
      <button
        class="c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        <span
          class="clptm3f soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        10
      </button>
      <button
        class="c-z4e58d soui-pagination-section c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        <span
          class="clptm3f soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about control 1`] = `
<div>
  <div
    style="display: flex; align-items: center; margin-bottom: 24px;"
  >
    <span
      style="font-size: 14px;"
    >
      Jump to
    </span>
    <div
      class="c31ox6i soui-input-wrapper-number c-vjwwj3 soui-input-wrapper"
      data-soui-input-border="true"
      style="width: 80px; margin-left: 8px;"
    >
      <div
        class="c-nqli0u soui-input-wrapper-inner-title-top c-rrnjtu soui-input-wrapper-inner-title-bottom cn0g3sb soui-input-wrapper-padding-box cstshfb soui-input-content"
      >
        <input
          class="c-e9hx4 soui-input-input"
          type="text"
          value="1"
        />
      </div>
      <div
        class="cqjm0xj soui-input-number-step"
      >
        <span>
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
        <span>
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="c-kqdu84 soui-pagination-pagination clpvkbt soui-pagination-left"
  >
    <div
      class="c-z4e58d soui-pagination-section c7bdtpb soui-pagination-buttons"
    >
      <button
        class="c-z4e58d soui-pagination-section c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button c-fpstvu soui-button-disabled cyar3hj soui-button-text c2ekatz soui-button-square"
        disabled=""
        type="button"
      >
        <span
          class="clptm3f soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cyreavb soui-pagination-button-item cusxw20 soui-button-primary c-5l0cgk soui-button-button c2ekatz soui-button-square"
        type="button"
      >
        1
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        2
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        3
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        4
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        5
      </button>
      <button
        class="c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        <span
          class="clptm3f soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        10
      </button>
      <button
        class="c-z4e58d soui-pagination-section c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        <span
          class="clptm3f soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about disabled 1`] = `
<div
  class="c-kqdu84 soui-pagination-pagination clpvkbt soui-pagination-left"
>
  <div
    class="c-z4e58d soui-pagination-section"
  >
    <span>
      total 500
    </span>
  </div>
  <div
    class="c-z4e58d soui-pagination-section c7bdtpb soui-pagination-buttons"
  >
    <button
      class="c-z4e58d soui-pagination-section c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button c-fpstvu soui-button-disabled cyar3hj soui-button-text c2ekatz soui-button-square"
      disabled=""
      type="button"
    >
      <span
        class="clptm3f soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="cyreavb soui-pagination-button-item cusxw20 soui-button-primary c-5l0cgk soui-button-button c-fpstvu soui-button-disabled c2ekatz soui-button-square"
      disabled=""
      type="button"
    >
      1
    </button>
    <button
      class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button c-fpstvu soui-button-disabled cyar3hj soui-button-text c2ekatz soui-button-square"
      disabled=""
      type="button"
    >
      2
    </button>
    <button
      class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button c-fpstvu soui-button-disabled cyar3hj soui-button-text c2ekatz soui-button-square"
      disabled=""
      type="button"
    >
      3
    </button>
    <button
      class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button c-fpstvu soui-button-disabled cyar3hj soui-button-text c2ekatz soui-button-square"
      disabled=""
      type="button"
    >
      4
    </button>
    <button
      class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button c-fpstvu soui-button-disabled cyar3hj soui-button-text c2ekatz soui-button-square"
      disabled=""
      type="button"
    >
      5
    </button>
    <button
      class="c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button c-fpstvu soui-button-disabled cyar3hj soui-button-text c2ekatz soui-button-square"
      disabled=""
      type="button"
    >
      <span
        class="clptm3f soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button c-fpstvu soui-button-disabled cyar3hj soui-button-text c2ekatz soui-button-square"
      disabled=""
      type="button"
    >
      50
    </button>
    <button
      class="c-z4e58d soui-pagination-section c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button c-fpstvu soui-button-disabled cyar3hj soui-button-text c2ekatz soui-button-square"
      disabled=""
      type="button"
    >
      <span
        class="clptm3f soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="c-z4e58d soui-pagination-section c-ozqucf soui-pagination-size-list"
  >
    <div
      class="c-uhw2up soui-select-wrapper c8cbiuj soui-select-wrapper-disabled"
      data-soui-input-border="true"
    >
      <div
        class="curco8i soui-select-result-wrapper cine0o9 soui-select-wrapper-padding-box c-702wak soui-select-wrapper-inner-title-top c5nrg2k soui-select-wrapper-inner-title-bottom"
      >
        <div
          class="cchy1ep soui-select-result"
        >
          <div
            class="cwqxflx soui-select-result-text-wrapper"
          >
            <span
              class="cfhw311 soui-select-ellipsis"
            >
              10  / page
            </span>
          </div>
        </div>
        <div
          class="c-6xycdm soui-select-icon-wrapper"
        >
          <span
            class="cbj7xni soui-select-arrow-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c-z4e58d soui-pagination-section c-c0okg3 soui-pagination-jumper"
  >
    <span
      class="c-z4e58d soui-pagination-section"
    >
      Go to 
    </span>
    <div
      class="c-z4e58d soui-pagination-section c7klu19 soui-pagination-jumper-input c-vjwwj3 soui-input-wrapper c-jg0d1v soui-input-wrapper-disabled"
      data-soui-input-border="true"
      style="width: 56px;"
    >
      <div
        class="c-nqli0u soui-input-wrapper-inner-title-top c-rrnjtu soui-input-wrapper-inner-title-bottom cn0g3sb soui-input-wrapper-padding-box cstshfb soui-input-content"
      >
        <input
          class="c-e9hx4 soui-input-input"
          disabled=""
          type="text"
          value="1"
        />
      </div>
    </div>
    <span
      class="c-z4e58d soui-pagination-section"
    >
       Page
    </span>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about jumper 1`] = `
<div
  class="c-kqdu84 soui-pagination-pagination clpvkbt soui-pagination-left"
>
  <div
    class="c-z4e58d soui-pagination-section c7bdtpb soui-pagination-buttons"
  >
    <button
      class="c-z4e58d soui-pagination-section c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button c-fpstvu soui-button-disabled cyar3hj soui-button-text c2ekatz soui-button-square"
      disabled=""
      type="button"
    >
      <span
        class="clptm3f soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="cyreavb soui-pagination-button-item cusxw20 soui-button-primary c-5l0cgk soui-button-button c2ekatz soui-button-square"
      type="button"
    >
      1
    </button>
    <button
      class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
      type="button"
    >
      2
    </button>
    <button
      class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
      type="button"
    >
      3
    </button>
    <button
      class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
      type="button"
    >
      4
    </button>
    <button
      class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
      type="button"
    >
      5
    </button>
    <button
      class="c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
      type="button"
    >
      <span
        class="clptm3f soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
      type="button"
    >
      10
    </button>
    <button
      class="c-z4e58d soui-pagination-section c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
      type="button"
    >
      <span
        class="clptm3f soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="c-z4e58d soui-pagination-section c-c0okg3 soui-pagination-jumper"
  >
    <span
      class="c-z4e58d soui-pagination-section"
    >
      Go to 
    </span>
    <div
      class="c-z4e58d soui-pagination-section c7klu19 soui-pagination-jumper-input c-vjwwj3 soui-input-wrapper"
      data-soui-input-border="true"
      style="width: 56px;"
    >
      <div
        class="c-nqli0u soui-input-wrapper-inner-title-top c-rrnjtu soui-input-wrapper-inner-title-bottom cn0g3sb soui-input-wrapper-padding-box cstshfb soui-input-content"
      >
        <input
          class="c-e9hx4 soui-input-input"
          type="text"
          value="1"
        />
      </div>
    </div>
    <span
      class="c-z4e58d soui-pagination-section"
    >
       Page
    </span>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about mode 1`] = `
<div>
  <div
    class="c-kqdu84 soui-pagination-pagination clpvkbt soui-pagination-left"
    style="margin-bottom: 24px;"
  >
    <div
      class="c-z4e58d soui-pagination-section c7bdtpb soui-pagination-buttons"
    >
      <button
        class="c-z4e58d soui-pagination-section c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button c-fpstvu soui-button-disabled cyar3hj soui-button-text c2ekatz soui-button-square"
        disabled=""
        type="button"
      >
        <span
          class="clptm3f soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cyreavb soui-pagination-button-item cusxw20 soui-button-primary c-5l0cgk soui-button-button c2ekatz soui-button-square"
        type="button"
      >
        1
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        2
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        3
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        4
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        5
      </button>
      <button
        class="c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        <span
          class="clptm3f soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        10
      </button>
      <button
        class="c-z4e58d soui-pagination-section c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        <span
          class="clptm3f soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="c-kqdu84 soui-pagination-pagination clpvkbt soui-pagination-left"
  >
    <div
      class="c-z4e58d soui-pagination-section c7bdtpb soui-pagination-buttons"
    >
      <button
        class="c-z4e58d soui-pagination-section c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button c-fpstvu soui-button-disabled chppqdk soui-button-outline c2ekatz soui-button-square"
        disabled=""
        type="button"
      >
        <span
          class="clptm3f soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cyreavb soui-pagination-button-item cusxw20 soui-button-primary c-5l0cgk soui-button-button c2ekatz soui-button-square"
        type="button"
      >
        1
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button chppqdk soui-button-outline c2ekatz soui-button-square"
        type="button"
      >
        2
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button chppqdk soui-button-outline c2ekatz soui-button-square"
        type="button"
      >
        3
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button chppqdk soui-button-outline c2ekatz soui-button-square"
        type="button"
      >
        4
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button chppqdk soui-button-outline c2ekatz soui-button-square"
        type="button"
      >
        5
      </button>
      <button
        class="c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button chppqdk soui-button-outline c2ekatz soui-button-square"
        type="button"
      >
        <span
          class="clptm3f soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button chppqdk soui-button-outline c2ekatz soui-button-square"
        type="button"
      >
        10
      </button>
      <button
        class="c-z4e58d soui-pagination-section c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button chppqdk soui-button-outline c2ekatz soui-button-square"
        type="button"
      >
        <span
          class="clptm3f soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about simple 1`] = `
<div
  class="c-kqdu84 soui-pagination-pagination clpvkbt soui-pagination-left"
>
  <button
    class="c-z4e58d soui-pagination-section c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button c-fpstvu soui-button-disabled cyar3hj soui-button-text c2ekatz soui-button-square"
    disabled=""
    type="button"
  >
    <span
      class="clptm3f soui-pagination-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
        />
      </svg>
    </span>
  </button>
  <div
    class="c-z4e58d soui-pagination-section c-c0okg3 soui-pagination-jumper"
  >
    <div
      class="c-z4e58d soui-pagination-section c7klu19 soui-pagination-jumper-input c-vjwwj3 soui-input-wrapper"
      data-soui-input-border="true"
      style="width: 56px;"
    >
      <div
        class="c-nqli0u soui-input-wrapper-inner-title-top c-rrnjtu soui-input-wrapper-inner-title-bottom cn0g3sb soui-input-wrapper-padding-box cstshfb soui-input-content"
      >
        <input
          class="c-e9hx4 soui-input-input"
          type="text"
          value="1"
        />
      </div>
    </div>
    <span
      class="c-z4e58d soui-pagination-section cy47po8 soui-pagination-split"
    >
      /
    </span>
    <span
      class="c-z4e58d soui-pagination-section"
    >
      5
    </span>
  </div>
  <button
    class="c-z4e58d soui-pagination-section c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
    type="button"
  >
    <span
      class="clptm3f soui-pagination-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Pagination[Base] should render correctly about size 1`] = `
<div>
  <div
    class="c-kqdu84 soui-pagination-pagination clpvkbt soui-pagination-left cy45kmd soui-pagination-small"
    style="margin-bottom: 24px;"
  >
    <div
      class="c-z4e58d soui-pagination-section c7bdtpb soui-pagination-buttons"
    >
      <button
        class="c-z4e58d soui-pagination-section c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button c-fpstvu soui-button-disabled cyar3hj soui-button-text c2ekatz soui-button-square c-27rzeb soui-button-small"
        disabled=""
        type="button"
      >
        <span
          class="clptm3f soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cyreavb soui-pagination-button-item cusxw20 soui-button-primary c-5l0cgk soui-button-button c2ekatz soui-button-square c-27rzeb soui-button-small"
        type="button"
      >
        1
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square c-27rzeb soui-button-small"
        type="button"
      >
        2
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square c-27rzeb soui-button-small"
        type="button"
      >
        3
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square c-27rzeb soui-button-small"
        type="button"
      >
        4
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square c-27rzeb soui-button-small"
        type="button"
      >
        5
      </button>
      <button
        class="c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square c-27rzeb soui-button-small"
        type="button"
      >
        <span
          class="clptm3f soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square c-27rzeb soui-button-small"
        type="button"
      >
        10
      </button>
      <button
        class="c-z4e58d soui-pagination-section c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square c-27rzeb soui-button-small"
        type="button"
      >
        <span
          class="clptm3f soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="c-kqdu84 soui-pagination-pagination clpvkbt soui-pagination-left"
    style="margin-bottom: 24px;"
  >
    <div
      class="c-z4e58d soui-pagination-section c7bdtpb soui-pagination-buttons"
    >
      <button
        class="c-z4e58d soui-pagination-section c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button c-fpstvu soui-button-disabled cyar3hj soui-button-text c2ekatz soui-button-square"
        disabled=""
        type="button"
      >
        <span
          class="clptm3f soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cyreavb soui-pagination-button-item cusxw20 soui-button-primary c-5l0cgk soui-button-button c2ekatz soui-button-square"
        type="button"
      >
        1
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        2
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        3
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        4
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        5
      </button>
      <button
        class="c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        <span
          class="clptm3f soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        10
      </button>
      <button
        class="c-z4e58d soui-pagination-section c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        <span
          class="clptm3f soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="c-kqdu84 soui-pagination-pagination clpvkbt soui-pagination-left cy03p3t soui-pagination-large"
  >
    <div
      class="c-z4e58d soui-pagination-section c7bdtpb soui-pagination-buttons"
    >
      <button
        class="c-z4e58d soui-pagination-section c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button c-fpstvu soui-button-disabled cyar3hj soui-button-text c2ekatz soui-button-square c-2btuwv soui-button-large"
        disabled=""
        type="button"
      >
        <span
          class="clptm3f soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cyreavb soui-pagination-button-item cusxw20 soui-button-primary c-5l0cgk soui-button-button c2ekatz soui-button-square c-2btuwv soui-button-large"
        type="button"
      >
        1
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square c-2btuwv soui-button-large"
        type="button"
      >
        2
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square c-2btuwv soui-button-large"
        type="button"
      >
        3
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square c-2btuwv soui-button-large"
        type="button"
      >
        4
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square c-2btuwv soui-button-large"
        type="button"
      >
        5
      </button>
      <button
        class="c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square c-2btuwv soui-button-large"
        type="button"
      >
        <span
          class="clptm3f soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square c-2btuwv soui-button-large"
        type="button"
      >
        10
      </button>
      <button
        class="c-z4e58d soui-pagination-section c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square c-2btuwv soui-button-large"
        type="button"
      >
        <span
          class="clptm3f soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about span 1`] = `
<div>
  <div
    class="c-kqdu84 soui-pagination-pagination clpvkbt soui-pagination-left"
    style="margin-bottom: 24px;"
  >
    <div
      class="c-z4e58d soui-pagination-section c7bdtpb soui-pagination-buttons"
    >
      <button
        class="c-z4e58d soui-pagination-section c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button c-fpstvu soui-button-disabled cyar3hj soui-button-text c2ekatz soui-button-square"
        disabled=""
        type="button"
      >
        <span
          class="clptm3f soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cyreavb soui-pagination-button-item cusxw20 soui-button-primary c-5l0cgk soui-button-button c2ekatz soui-button-square"
        type="button"
      >
        1
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        2
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        3
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        4
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        5
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        6
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        7
      </button>
      <button
        class="c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        <span
          class="clptm3f soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        10
      </button>
      <button
        class="c-z4e58d soui-pagination-section c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        <span
          class="clptm3f soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="c-kqdu84 soui-pagination-pagination clpvkbt soui-pagination-left"
  >
    <div
      class="c-z4e58d soui-pagination-section c7bdtpb soui-pagination-buttons"
    >
      <button
        class="c-z4e58d soui-pagination-section c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        <span
          class="clptm3f soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        1
      </button>
      <button
        class="c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        <span
          class="clptm3f soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        5
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        6
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        7
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        8
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        9
      </button>
      <button
        class="cyreavb soui-pagination-button-item cusxw20 soui-button-primary c-5l0cgk soui-button-button c2ekatz soui-button-square"
        type="button"
      >
        10
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        11
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        12
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        13
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        14
      </button>
      <button
        class="c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        <span
          class="clptm3f soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text"
        type="button"
      >
        100
      </button>
      <button
        class="c-z4e58d soui-pagination-section c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
        type="button"
      >
        <span
          class="clptm3f soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about text 1`] = `
<div
  class="c-kqdu84 soui-pagination-pagination clpvkbt soui-pagination-left"
>
  <div
    class="c-z4e58d soui-pagination-section c7bdtpb soui-pagination-buttons"
  >
    <button
      class="c-z4e58d soui-pagination-section c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button c-fpstvu soui-button-disabled cyar3hj soui-button-text c2ekatz soui-button-square"
      disabled=""
      type="button"
    >
      <span>
        Previous
      </span>
    </button>
    <button
      class="cyreavb soui-pagination-button-item cusxw20 soui-button-primary c-5l0cgk soui-button-button c2ekatz soui-button-square"
      type="button"
    >
      1
    </button>
    <button
      class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
      type="button"
    >
      2
    </button>
    <button
      class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
      type="button"
    >
      3
    </button>
    <button
      class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
      type="button"
    >
      4
    </button>
    <button
      class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
      type="button"
    >
      5
    </button>
    <button
      class="c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
      type="button"
    >
      <span
        class="clptm3f soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
      type="button"
    >
      26
    </button>
    <button
      class="c-z4e58d soui-pagination-section c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
      type="button"
    >
      <span>
        Next
      </span>
    </button>
  </div>
  <div
    class="c-z4e58d soui-pagination-section c-ozqucf soui-pagination-size-list"
  >
    <div
      class="c-uhw2up soui-select-wrapper"
      data-soui-input-border="true"
      tabindex="0"
    >
      <div
        class="curco8i soui-select-result-wrapper cine0o9 soui-select-wrapper-padding-box c-702wak soui-select-wrapper-inner-title-top c5nrg2k soui-select-wrapper-inner-title-bottom"
      >
        <div
          class="cchy1ep soui-select-result"
        >
          <div
            class="cwqxflx soui-select-result-text-wrapper"
          >
            <span
              class="cfhw311 soui-select-ellipsis"
            >
              10  / page
            </span>
          </div>
        </div>
        <div
          class="c-6xycdm soui-select-icon-wrapper"
        >
          <span
            class="cbj7xni soui-select-arrow-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c-z4e58d soui-pagination-section"
  >
    <span>
      1 to 10 of 256 items
    </span>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about total 1`] = `
<div
  class="c-kqdu84 soui-pagination-pagination clpvkbt soui-pagination-left"
>
  <div
    class="c-z4e58d soui-pagination-section"
  >
    <span>
      total 500
    </span>
  </div>
  <div
    class="c-z4e58d soui-pagination-section c7bdtpb soui-pagination-buttons"
  >
    <button
      class="c-z4e58d soui-pagination-section c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button c-fpstvu soui-button-disabled cyar3hj soui-button-text c2ekatz soui-button-square"
      disabled=""
      type="button"
    >
      <span
        class="clptm3f soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="cyreavb soui-pagination-button-item cusxw20 soui-button-primary c-5l0cgk soui-button-button c2ekatz soui-button-square"
      type="button"
    >
      1
    </button>
    <button
      class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
      type="button"
    >
      2
    </button>
    <button
      class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
      type="button"
    >
      3
    </button>
    <button
      class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
      type="button"
    >
      4
    </button>
    <button
      class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
      type="button"
    >
      5
    </button>
    <button
      class="c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
      type="button"
    >
      <span
        class="clptm3f soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
      type="button"
    >
      50
    </button>
    <button
      class="c-z4e58d soui-pagination-section c-jyno0s soui-pagination-section-size cyreavb soui-pagination-button-item c-d8gau soui-button-secondary c-5l0cgk soui-button-button cyar3hj soui-button-text c2ekatz soui-button-square"
      type="button"
    >
      <span
        class="clptm3f soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;
